# Infra-Autopilot-Assistant

./: .display  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-docker-mac.sh  docker-compose.yaml  install.sh
LamppostAutoCarDemo/: .gitignore  CMakeLists.txt
LamppostAutoCarDemo/driver/: CC2520.h  CC2520_HW.h  CC2520_Helper.h
LamppostAutoCarDemo/include/: CN_CommPanel.hh  CN_General.hh  ControlNode.hh  LP_CommPanel.hh  LP_General.hh  Lamppost.hh
LamppostAutoCarDemo/src/: CN_Main.cc  LP_CommPanel.cc  LP_General.cc  LP_Main.cc  LP_RBDetection.cc
_config/: Robomaster_cam.xml  gpsref.xml  lamp0.ini  lamp1.ini  lamp2.ini  lamp258.ini  lamp259.ini  lamp260.ini  lamp3.ini  webcam_640x480.xml
detection/f_aruco/: CMakeLists.txt
detection/f_aruco/yml/: out_camera_calibration.yml
driver/: CC2520.c  CC2520_HW.c  CC2520_Helper.c  CC2520_Helper.h
final/f_aruco/test/: cam_pose_estimator.cpp
include/: CN_CommPanel.hh  CtrlCommPanel.hh  LP_CommPanel.hh  LP_RBDetection.hh  LamppostHostCommPanel.hh  LamppostHostGeneral.hh  LamppostHostRBDetection.hh  LamppostHostUtils.hh  utils.hh
include/Control/: CtrlGeneral.hh  CtrlPathSearch.hh
include/LPHook/: LamppostHookCommPanel.hh  LamppostHookGeneral.hh  LamppostHookUtils.hh
include/LPHost/: LamppostHostBackendConn.hh  LamppostHostCommPanel.hh  LamppostHostGeneral.hh  LamppostHostRBDetection.hh  LamppostHostUtils.hh
python/: db_service.py  ep.py  gps_read.py  parseXML.py
scripts/: RobomasterDaemon.py  RobomasterRecorder.py  install-lamppost.sh  sim.py
src/: CN_CommPanel.cc  LP_CommPanel.cc  LP_Main.cc  LamppostHostCommPanel.cc  LamppostHostGeneral.cc  LamppostHostMain.cc  LamppostHostRBDetection.cc  LampppostHookMain.cc  lmphostctl.cc  utils.cc
src/Control/: CtrlGeneral.cc  CtrlMain.cc  CtrlPathSearch.cc  CtrlThread.cc
src/LPHook/: LamppostHookCommPanel.cc  LamppostHookGeneral.cc  LamppostHookMain.cc
src/LPHost/: LamppostHostBackendConn.cc  LamppostHostCommPanel.cc  LamppostHostGeneral.cc  LamppostHostMain.cc  LamppostHostRBDetection.cc  testmysqlconn.cc
